lab7 part